--- a/codegen/pom.xml
+++ b/codegen/pom.xml
@@ -46,6 +46,15 @@
             <artifactId>airline</artifactId>
             <version>0.7</version>
         </dependency>
+        <!-- logger(slf4j) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
